# playground

anki-app/: .gitignore  next.config.ts  package.json  playwright.config.ts
anki-app/e2e/: foundation.spec.ts  import.spec.ts  stats.spec.ts  study.spec.ts
claude-monitor/: index.html  package.json
claude-monitor-raycast/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
claude-monitor-raycast/src/: list-sessions.tsx  sessions.ts
claude-monitor/src/: main.ts  styles.css
claude-monitor/src-tauri/: Cargo.toml  tauri.conf.json
claude-monitor/src-tauri/src/: lib.rs  session.rs
pokemon-card-kifu/: .gitignore  README.md  pyproject.toml
pokemon-card-kifu/examples/: decklist.json  zone_config.json
pokemon-card-kifu/src/kifu/: __main__.py  cache.py  cli.py  config.py  diff.py  identify.py  image.py  kifu.py  models.py
pokemon-card-kifu/tests/: conftest.py  test_diff.py  test_image.py  test_kifu.py  test_models.py
pokemon-card-kifu/tools/: zone_editor.html
pokemon-card-scraper/: .gitignore  README.md  packs.txt  scraper.py
pokemon-card-simulator/: .gitignore  ACCEPTANCE.md  DND_TEST_STABILIZATION.md  README.md  REFACTORING_PLAN.md  index.html  package.json  playwright.config.ts  playwright.visual.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
pokemon-card-simulator/scripts/: build-cards-json.ts
pokemon-probability/: index.html  package-lock.json  package.json  panda.config.ts
pr-ci-monitor-raycast/: package.json
thread-prototype/: .gitignore  DESIGN_SYSTEM.md  next.config.ts  package-lock.json  package.json
(+179 files in other folders)
