[package]
name = "claude-monitor"
version = "0.1.0"
description = "Claude Code Session Monitor"
authors = ["ta21cos"]
edition = "2021"

[lib]
name = "claude_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
dirs = "6"
glob = "0.3"
